css/base.scss
/* ... */
.bch-only-hidden {
  opacity: 0.4;
}

.google-form {
  height: 80vh;
}

#no-results {
  display: none;
  margin: 10px 0 128px;
  padding: 20px 0;
  text-align: center;
  color: #fff;
  background: #830000c9;
  border: 3px solid #f00;
  border-width: 3px 0;
}

.ui.dimmer {
  background-color: rgba(0, 0, 0, 0.93);
  z-index: 10001;

  a {
    color: $blue-light;

    &:hover {
      color: $orange;
    }
  }
}

.ui.header {
  color: inherit;

  .sub.header {
    color: #fff;
  }
}

.ui.container {
  background: $blue-light-alpha;
  border: 3px solid $blue-lighter;
  border-radius: 7px;
  padding: 70px 20px 40px;
  margin-top: 4rem;

  &.nav {
    background: none;
    border: 0;
    margin-bottom: -5.2rem;
    padding: 0;

    div.buttons {
      padding: 0 1rem;

      a.ui.button {
        padding: 0.7rem 1.5rem;
        font-weight: normal;
        font-size: 1.2rem;

        &.active-nav {
          font-weight: bold;
          padding-bottom: 0;
          //border-bottom: 7px solid rgba(0,0,0,0.2);
          border-bottom: 7px solid rgba(240, 240, 240, 0.3);
        }

        &.blue {
          background-color: $blue;

          &:hover {
            background-color: $blue-dark;
          }
        }
      }
    }
  }

  &.donation-listings {
    border-color: $violet-light;
    background: rgba(134, 85, 181, 0.45);
    margin-bottom: 4rem;
  }

  &.adult-listings {
    border-color: $pink-light;
    background: rgba(181, 85, 165, 0.45);
    margin-bottom: 4rem;
  }
}

.ui.grid > .row {
  padding: 0;
}

.ui.button {
  font-family: Ubuntu, Lato, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  line-height: 1.3;
}

.ui.inverted.blue.button:hover, .ui.inverted.blue.buttons .button:hover {
  background: $blue;
}

.desktop-table {
  padding: 18px 0;
}

.category {
  cursor: pointer;
  padding-top: 20px;
  text-align: center;

  h5.ui.icon.header {
    color: inherit;
    margin-bottom: 1.5rem;

    i.circular.icon {
      @include transition(all, ease, 300ms);
      background: #fff;
      box-shadow: 0 0 0 3px $green-light inset;
      border-radius: 10px !important;
      border-color: $orange-light;
      margin-bottom: 0.8rem;
    }

    small {
      @include transition(all, ease, 300ms);
      display: inline-block;
      background: #fff;
      border: 3px solid $green-light;
      border-radius: 10px;
      padding: 5px 10px;
      font-size: 1rem;
    }

    &:hover i.circular.icon, &:hover i.circular.icon + small {
      background-color: $orange-light;
      border-color: $orange;
      color: $orange-dark;
    }

    &:hover i.circular.icon {
      box-shadow: 0 0 0 3px $orange inset;
    }

    &.active-icon {
      i.circular.icon {
        background-color: $orange;
        color: white;
        box-shadow: 0 0 0 3px $orange-dark inset;

        & + small {
          border: 3px solid $orange-dark;
          background-color: $orange;
          color: white;
        }
      }
    }
  }
}

.ui.table.content-wrapper {
  background: #fff;
  border-radius: 0 !important;
  border: 3px solid $blue-lighter;
  border-width: 3px 0;
  //box-shadow: 2px 5px 20px rgba(80, 80, 80, 0.2), -2px -1px 20px rgba(80, 80, 80, 0.2);
}

.ui.table thead th {
  color: $blue;
}

.ui.table thead th:first-child {
  background: #327c9e;
  background: -moz-linear-gradient(left, $blue 0%, $blue 58%, #f9fafb 100%);
  background: -webkit-gradient(left top, right top, color-stop(0%, $blue), color-stop(58%, $blue), color-stop(100%, #f9fafb));
  background: -webkit-linear-gradient(left, $blue 0%, $blue 58%, #f9fafb 100%);
  background: -o-linear-gradient(left, $blue 0%, $blue 58%, #f9fafb 100%);
  background: -ms-linear-gradient(left, $blue 0%, $blue 58%, #f9fafb 100%);
  background: linear-gradient(to right, $blue 0%, $blue 58%, #f9fafb 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$blue', endColorstr='#f9fafb', GradientType=1 );
  border-radius: 0 !important;
  font-size: 1.2rem;
  color: #f9fafb;
}

.ui.table thead th:not(:first-child) {
  text-align: center;
}

.ui.table td.positive, .ui.table tr.positive {
  color: $green !important;
}

.ui.table tr td.docs a {
  color: $blue !important;

  &:hover {
    color: $orange !important;
  }
}

.ui.table td.twitter {
  text-align: center;
}
/* ... */

